<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.administrador.appportfolio.MainActivity">

    <TextView
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_str"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView" />

    <Button
        android:text="@string/popular_movies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/bt_popular_movies" />
    <Button
        android:text="@string/stock_hawk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt_popular_movies"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/bt_stock_hawk" />
    <Button
        android:text="@string/build_it_bigger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt_stock_hawk"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/bt_build_it_bigger" />
    <Button
        android:text="@string/make_your_app_material"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt_build_it_bigger"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/bt_make_your_app_material" />
    <Button
        android:text="@string/go_ubiquitous"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt_make_your_app_material"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/bt_go_ubiquitous" />
    <Button
        android:text="@string/capstone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt_go_ubiquitous"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/bt_capstone" />

</RelativeLayout>
